<resources>
    <string name="app_name">CostumerManagement</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="user_name">Username</string>
    <string name="email_address">Email</string>
    <string name="password_again">Password again</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_new">Add new</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="email">Email</string>
    <string name="costumer_name">Name</string>
    <string name="costumer_status">Status</string>
    <string name="payment_method">Payment Method</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="views">views</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="id">ID</string>
    <string name="status">Status</string>
    <string name="refresh">Refresh</string>
</resources>