<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Update">

    <EditText
        android:id="@+id/itemName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/itemStatus"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="textPersonName"
        android:layout_below="@+id/itemName"/>

    <EditText
        android:id="@+id/itemPaymentMethod"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/payment_method"
        android:inputType="textPersonName"
        android:layout_below="@+id/itemStatus"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemPaymentMethod"
        android:padding="8dp"
        android:layout_centerHorizontal="true">

    <Button
        android:id="@+id/itemUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="update"
        android:text="@string/update"/>
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"/>
    </LinearLayout>

</RelativeLayout>